# oreilly_live_training_getting_started_with_langchain

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
demo/: README.md  agent.py  langgraph.json
demo/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
deprecated/: README.md
notebooks/: 00-langchain-basics-intro.ipynb  1.0-langchain-fundamentals.ipynb  2.0-structured-outputs.ipynb  3.0-rag-with-langchain.ipynb  research.md
notebooks/chroma-db/: chroma.sqlite3
tmp-langchain/: structured_report_agent.py
